# mobilegpu-turbo

./: .gitignore  Cargo.toml  LEGAL_DISCLAIMER.md  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml
docs/: INSTALLATION.md  USAGE.md
examples/bend_programs/: bitonic_sort_a23.bend  bitonic_sort_a23.sh
examples/bend_programs/CPU/: qwen
examples/bend_programs/CPU/Gemini/: readme.md
scripts/: setup.sh
src/: main.rs
