[package]
name = "mobilegpu-turbo"
version = "1.0.0"
edition = "2021"
authors = ["MobileGPU Team <contato@mobilegpu-turbo.dev>"]
description = "Paralelização automática de apps Android com GPU"
license = "MIT"
repository = "https://github.com/mobilegpu-turbo/mobilegpu-turbo"
homepage = "https://mobilegpu-turbo.dev"
documentation = "https://docs.mobilegpu-turbo.dev"
readme = "README.md"
keywords = ["android", "gpu", "parallelization", "performance", "mobile"]
categories = ["development-tools", "hardware-support", "multimedia"]

[workspace]
members = ["core", "sdk"]

[features]
default = ["cpu-parallel"]
cpu-parallel = ["rayon", "crossbeam", "tokio"]
gpu-turbo = ["ash", "wgpu", "vulkan-loader"]
full-parallel = ["cpu-parallel", "gpu-turbo"]
android-support = ["jni", "ndk"]
drex-support = ["drex-sdk"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

# CPU Parallelism
rayon = { version = "1.7", optional = true }
crossbeam = { version = "0.8", optional = true }
num_cpus = "1.16"

# GPU Computing
ash = { version = "0.37", optional = true }
wgpu = { version = "0.18", optional = true }
vulkan-loader = { version = "0.8", optional = true }

# Android support
jni = { version = "0.21", optional = true }
ndk = { version = "0.7", optional = true }

# DREX integration (futuro)
drex-sdk = { version = "0.1", optional = true }

# Utilities
once_cell = "1.18"
parking_lot = "0.12"
dashmap = "5.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "mobilegpu-turbo"
path = "src/main.rs"
